[tool.poetry]
name = "pychatgpt-tutorial"
version = "0.1.0"
description = "This repository is a tutorial for https://qiita.com/ekusiadadus/items/3304c4832106b244a60f"
authors = ["ekusiadadus <ekusiadadus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
chatgptpy = "^1.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
